2009-03-16  Jonh Wendell  <jwendell@gnome.org>

	* configure.in: post-release bump version to 2.26.1

==================== 2.26.0 =======================

2009-03-06  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.glade: Remove extra spacing from preferences window.
	Closes #574135.

2009-03-02  Jonh Wendell  <jwendell@gnome.org>

	* configure.in: post-release bump version to 2.26.0

==================== 2.25.92 =======================
2009-02-19  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-connection.c,
	* src/vinagre-tab.c: Allow IPv6 address in command line as well in
	the connection dialog. The address must be enclosed by square braces,
	for instance: [::a:b:c:d]. This is the same syntax used by RealVNC.
	Closes Ubuntu #290394. The command line help and man page should be
	updated to reflect this, though.

2009-02-18  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.glade,
	* src/vinagre-tab.c: Improved the authentication dialog.

2009-02-16  Jonh Wendell  <jwendell@gnome.org>

	* configure.in: post-release bump version to 2.25.92

==================== 2.25.91 =======================

2009-02-13  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c (vinagre_tab_take_screenshot): Presents an error
	message if capture of screenshot fails.

2009-02-02  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.91

==================== 2.25.90 ======================

2009-01-30  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Handle correctly --enable-avahi, Closes #569878.

2009-01-22  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-applet.c: Rewrite of the applet, now using GObject.
	Also, fix the icon on transparent panels, closes #568674.

2009-01-21  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.90

==================== 2.25.5 ======================

2009-01-12  Kjartan Maraas  <kmaraas@gnome.org>

	* data/vinagre.glade: Don't translate widget
	labels.
