@@ -742,7 +742,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="button8">
+              <widget class="GtkButton" id="save_button">
                 <property name="label">gtk-save</property>
                 <property name="response_id">-5</property>
                 <property name="visible">True</property>
@@ -1035,7 +1035,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="button6">
+              <widget class="GtkButton" id="save_button">
                 <property name="label">gtk-save</property>
                 <property name="response_id">-5</property>
                 <property name="visible">True</property>
