@@ -1,3 +1,10 @@
+2009-03-20  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-bookmarks.[ch],
+	* src/vinagre-bookmarks-ui.c,
+	* data/vinagre.glade: Don't allow items name duplicated on bookmarks.
+	Closes #574134.
+
 2009-03-16  Jonh Wendell  <jwendell@gnome.org>
 
 	* configure.in: post-release bump version to 2.26.1
